# pyautogui-playground

./: .gitignore  pyproject.toml
_utils/: pyautogui.py
automations/: firefox_appstore_acquisition_export_csv.py
tools/: display_mouse_position.py
